fixed alignment on login page

--- a/client/src/LoginButton.css
+++ b/client/src/LoginButton.css
@@ -1,45 +1,29 @@
-body{
-
-background-repeat: none;
-background-size: cover;
-}
-
-
-
-.buttonContainer button{
-    display: block;
-    margin-left: 15px;
-    margin-top: 14px;
-    padding:  25px 20px;
+.buttonContainer {
+    width: 100%;
     color: white;
-    background: rgb(197, 89, 17) !important;
-    border-radius: 5px;
-    border: none;
-    font-size: 24px;
-    cursor: pointer;
+    border-radius: 20px;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+  }
+
+button {
+  color: white;
+  background: rgb(197, 89, 17);
+  cursor: pointer;
+  font-size: 24px;
+  width: 50%;
 }
 
-
-.buttonContainer button:hover{
+button:hover{
     background: rgb(161, 69, 7) !important;
 }
 
-
-div{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-}
-
-
-.buttonContainer{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-   
-}
-
 .buttonContainer img{
-    width: 40%;
+  display: block;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
 }
